--- a/webview-ui/src/i18n/locales/en/chat.json
+++ b/webview-ui/src/i18n/locales/en/chat.json
@@ -162,8 +162,8 @@
 		"didSearch": "Roo searched this directory for <code>{{regex}}</code>:"
 	},
 	"codebaseSearch": {
-		"wantsToSearch": "Roo wants to search the codebase for '{{query}}' (limit: {{limit}}):",
-		"wantsToSearchWithPath": "Roo wants to search the codebase for '{{query}}' (limit: {{limit}}) in '{{path}}':",
+		"wantsToSearch": "Roo wants to search the codebase for '{{query}}':",
+		"wantsToSearchWithPath": "Roo wants to search the codebase for '{{query}}' in '{{path}}':",
 		"didSearch": "Found {{count}} result(s) for '{{query}}':"
 	},
 	"commandOutput": "Command Output",
