--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -408,7 +408,7 @@
 			"description": "When the context window reaches this threshold, Roo will automatically condense it."
 		},
 		"AUTO_CONDENSE_CONTEXT": {
-			"name": "Automatically condense the context window",
+			"name": "Automatically trigger intelligent context condensing",
 			"description": "Intelligent context condensing uses an LLM call to summarize the past conversation when the task's context window reaches a preset threshold, rather than dropping old messages when the context fills."
 		},
 		"DIFF_STRATEGY_UNIFIED": {
