--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -498,9 +498,9 @@
 		"rangeDescription": "Higher values make output more random, lower values make it more deterministic."
 	},
 	"maxContextWindow": {
-		"useCustom": "Use custom context max window",
-		"description": "Controls randomness in the model's responses.",
-		"rangeDescription": "Higher values make output more random, lower values make it more deterministic."
+		"useCustom": "Use custom max context window",
+		"description": "Sets the maximum context window size for the model. When conversations approach this limit, Roo Code will automatically condense older messages to stay within the constraint.",
+		"rangeDescription": "Higher values allow longer conversations before condensing, lower values trigger condensing sooner to stay within API rate limits."
 	},
 	"modelInfo": {
 		"supportsImages": "Supports images",
